Inicializar Metodo Listar del Controlador de Citas

--- a/ ClinicaAPI/appsettings.json
+++ b/ ClinicaAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "cn": "server=localhost;uid=sa;pwd=sql;database=DSWI_Clinica"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
