--- a/ClinicaWebApp/ClinicaWebApp.csproj
+++ b/ClinicaWebApp/ClinicaWebApp.csproj
@@ -12,4 +12,9 @@
       <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Home\Privacy.cshtml" />
+    </ItemGroup>
+
 </Project>
