enviando cambios para Paciente

--- a/ ClinicaAPI/appsettings.json
+++ b/ ClinicaAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "cn": "server=localhost;uid=sa;pwd=sql;database=DSWI_Clinica"
+    "cn": "server=.;uid=sa;pwd=sql;database=DSWI_Clinica"
   },
   "Logging": {
     "LogLevel": {
