--- a/ClinicaWebApp/ClinicaWebApp.csproj
+++ b/ClinicaWebApp/ClinicaWebApp.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="Rotativa.AspNetCore" Version="1.4.0" />
       <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
     </ItemGroup>
 
